[#173287183] refactor api specs and models
